==================================================================================================
Changes for 2.10
==================================================================================================
- Request (833): RCG now produces a text file that lists all ADC connections for that model as
  part of the make, make-install process.
  - make command produces build/modelepics/config/adcListSorted.txt
  - make install-model produces a /opt/rtcds/site/ifo/chans/adc/model_adclist.txt file.
- Added RCG version number to GDSTP screens.
- Added multi-page listing capabilities for unconnected EDCU channels. Presently, still a work
  in progress.
- Added a new install script, nort- (No real-time). This was added to properly generate
  the start script for EDCU models, which have no real-time component.
- Added a compile option (DUAL_DAQ_DC) for running with 2 data concentrators. Until I think of
  a better solution, this is 'hardwired' in feCodeGen.pl by setting daq2dc = 1. If it is desired
  to run with a single data concentrator, set this to daq2dc = 0 for now.
- mx_stream modified to provide additional diagnostics when used in a system with 2 DAQ data
  concentrators.
- Request (691): DAQ builds now detect EPICS, framecpp installs 
- Request (854): DAQ builds put labels on thread, can set real-time priority, CPU affinity
- Bug Fix (494): Remove test for frame directory count when using GPS-time folders
==================================================================================================
Changes for 2.9.4 release
==================================================================================================
- Changes to account for June 30, 2015 leap second.
   - Modified timing.c and spectracom.c files to add leap second. This code should be redone in
        next major release as it is not well done here.
   - Dataviewer fixed by adding to leap second list in src/dv/Lib/UTC_GPS/leapsecs.txt
   - gds/tconv.c modified.